# meta-agents-harness

./: .env.sample  .gitignore  .mcp.example.json  .openclaude-profile.json  AGPL-3.0.md  CHANGELOG.md  COMMERCIAL-LICENSE.md  LICENSE  README.md  mcp-servers.example.json  meta-agents.backup.yaml  meta-agents.example.yaml  meta-agents.yaml  multi-team.hivehue.yaml  multi-team.yaml  package-lock.json  package.json  pi-session-2026-04-10T02-51-10-571Z_8efb3b61-25d8-488b-86fa-57de21fb186e.html  targets.registry.json  tsconfig.json
.claude/: mcp-servers.json  mcp.json  package-lock.json  package.json  settings.json
.codex/: .active-crew.json
.hermes/: package-lock.json  package.json
.kilo/: .active-crew.json
.opencode/: README.md  multi-team.yaml  opencode.json  package-lock.json  package.json  tsconfig.json
.pi/: alert-rules.yaml  damage-control-rules.yaml  mcp-servers.json  package-lock.json  package.json
docs/: README.md  bootstrap-cli-ux-research.md  context-manager.md  context-memory.md  cross-runtime-child-agents.md  expertise-catalog-governance.md  expertise-model-foundation.md  getting-started.md  headless-runtime.md  onboarding.md  platform-capabilities.md  plugin-api.md  runtime-boundary.md  sessions-interop.md  skills-cli.md  tasks-and-missions-cli.md  (+1 more)
skills/agentic-pert/package/: README.md  pyproject.toml
skills/agentic-pert/package/agentic_pert/: models.py  pert_cpm.py  planner.py  visualization.py
skills/agentic-pert/package/agentic_pert/adapters/: opencode.py
skills/agentic-pert/package/tests/: test_init.py  test_visualization.py
(+1018 files in other folders)
