[project]
name = "agentic-pert"
version = "0.1.0"
description = "Agentic PERT + CPM orchestrator for parallel task execution"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Alysson Machado", email = "alysson@example.com"}
]
keywords = ["pert", "cpm", "project-management", "agentic", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "networkx>=3.0",
    "typer>=0.9",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]
visualization = [
    "matplotlib>=3.7",
    "graphviz>=0.20",
]

[project.scripts]
pert-agent = "agentic_pert.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentic_pert"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
